# lingua

./: pyproject.toml
apps/main/: eval.py  train.py
apps/main/configs/: comma_7B.yaml  llama_7B.yaml
lingua/: checkpoint.py  stool.py
setup/: download_prepare_hf_data.py
